settings, daily reports

--- a/app/assets/javascripts/templates/header.handlebars
+++ b/app/assets/javascripts/templates/header.handlebars
@@ -9,6 +9,7 @@
     {{#if SS.hasShop}}
       <li><a {{action goToDashboard href=true}}>Dashboard</a></li>
       <li><a {{action goToFeed href=true}}>Feed</a></li>
+      <li><a {{action goToSettings href=true}}>Settings</a></li>
     {{/if}}
 
     <li class="logout">
