--- a/app/views/home/app.html.erb
+++ b/app/views/home/app.html.erb
@@ -1,3 +1,4 @@
+<%= audio_tag 'beep.wav', preload: :auto, class: 'beep-sound' %>
 <script>
   window.authToken = "<%= current_user.authentication_token %>";
   window.userId = "<%= current_user.id %>";
