--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -4,6 +4,11 @@
       width: 25%;
       margin-top: -40px;
       margin-left: -30px;
+
+      a {
+        color: #000;
+        text-decoration: none;
+      }
     }
 
     li {
