adding custom shops via front end app

--- a/app/assets/javascripts/templates/shop_selector.handlebars
+++ b/app/assets/javascripts/templates/shop_selector.handlebars
@@ -7,6 +7,6 @@
         <a {{action goToDashboard view.content href=true}}>{{view.content.name}}</a>
       {{/collection}}
     </div>
-    {{view SS.ConnectShopView}}
+    {{outlet add}}
   </section>
 </div>
