allow shop deletion

--- a/app/assets/javascripts/templates/settings.handlebars
+++ b/app/assets/javascripts/templates/settings.handlebars
@@ -32,6 +32,10 @@
         <div>
           <button {{action save target="controller"}}>Save</button>
         </div>
+
+        <div>
+          <button {{action deleteShop target="controller"}} class="red">Delete shop</button>
+        </div>
       </div>
     </div>
   </section>
