--- a/app/assets/javascripts/templates/feed.handlebars
+++ b/app/assets/javascripts/templates/feed.handlebars
@@ -1,7 +1,3 @@
-<div class="scroll con">
-  <section class="section current">
-    <div class="container top-spacing">
-      {{collection SS.FeedCollectionView contentBinding="content"}}
-    </div>
-  </section>
+<div class="twelve column">
+  {{collection SS.FeedCollectionView contentBinding="content"}}
 </div>
