--- a/app/assets/javascripts/templates/footer.handlebars
+++ b/app/assets/javascripts/templates/footer.handlebars
@@ -1,5 +1,5 @@
-<footer id="footer">
-  <div class="con">
-    <h4>&copy; 2012 ShopStream</h4>
+<footer class="row">
+  <div class="twelve columns">
+    <p>&copy; 2012 ShopStream</p>
   </div>
 </footer>
