--- a/app/assets/javascripts/templates/header.handlebars
+++ b/app/assets/javascripts/templates/header.handlebars
@@ -1,22 +1,31 @@
-<div id="header">
-  <ul class="con">
-    <div class="tile" id="logo">
-      <h2>
-        <a {{action goToIndex href=true}}>
-          <span>Shop</span>Stream
-        </a>
-      </h2>
-    </div>
-
-    {{#if isShop}}
-      <li><a {{action goToDashboard href=true}}>Dashboard</a></li>
-      <li><a {{action goToFeed href=true}}>Feed</a></li>
-      <li><a {{action goToSettings href=true}}>Settings</a></li>
-    {{/if}}
-
-    <li class="logout">
-      {{#if isShop}}{{SS.router.shopController.content.domain}}{{/if}}
-      <a href="/users/sign_out" data-method="delete"><img src="/assets/logout.png"></a>
+<nav class="top-bar">
+  <ul>
+    <li class="name">
+      <h1>
+        <a {{action goToIndex href=true}}>ShopStream</a>
+      </h1>
     </li>
+    <li class="toggle-topbar"><a href="#"></a></li>
   </ul>
-</div>
+  <section>
+    <ul class="left">
+      <li class="divider"></li>
+
+      {{#if isShop}}
+        <li><a {{action goToDashboard href=true}}>Dashboard</a></li>
+        <li><a {{action goToFeed href=true}}>Feed</a></li>
+        <li><a {{action goToSettings href=true}}>Settings</a></li>
+      {{/if}}
+    </ul>
+
+    <ul class="right">
+      <li class="divider show-for-medium-and-up"></li>
+      <li class="has-dropdown">
+        <a href="#">{{SS.user.email}}</a>
+        <ul class="dropdown">
+          <li><a href="/users/sign_out" data-method="delete">Log out</a></li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+</nav>
