--- a/app/assets/javascripts/templates/settings.handlebars
+++ b/app/assets/javascripts/templates/settings.handlebars
@@ -1,61 +1,66 @@
-<div class="scroll con">
-  <section class="section current">
-    <div class="container top-spacing">
-      <h2>Settings</h2>
+<h3>Settings</h3>
 
-      <div class="col_3 alpha">
-        <div class="input">
-          <label>
-            Name
-            {{view Ember.TextField valueBinding="name"}}
-          </label>
-        </div>
-        <div class="input">
-          <label>
-            Domain
-            {{view Ember.TextField valueBinding="domain"}}
-          </label>
-        </div>
-        <div class="input">
-          <label>
-            Timezone
-            {{view Ember.Select contentBinding="SS.timezones" optionValuePath="content.value" optionLabelPath="content.name" valueBinding="timezone"}}
-          </label>
-        </div>
-        <div class="input">
-          <label>
-            {{view Ember.Checkbox checkedBinding="sendDailyNotifications"}}
-            Send daily reports
-          </label>
-        </div>
-
-        <div>
-          <button {{action save target="controller"}}>Save</button>
-        </div>
-
-        <div>
-          <button {{action deleteShop target="controller"}} class="red">Delete shop</button>
-        </div>
-      </div>
-
-      {{#if isCustomShop}}
-        <div class="carton col_9">
-          <h2>Setup for custom shop</h2>
-          <div class="content">
-            <p>As you are using ShopStream with your custom, non-Shopify shop, we were not able to set it up for you. Just add the following tag to your template:</p>
-
-            <pre>&lt;script type=&quot;text/javascript&quot; src=&quot;{{trackerScriptUrl}}&quot;&gt;&lt;/script&gt;</pre>
-
-            <p>Then, track orders via JS like this:</p>
-
-            <pre>
-_shopstream.addOrder("Order name", $20.02, "email@customer.com", "first", "last");
-_shopstream.addItem("Title", $10.01, 2);
-_shopstream.trackOrder();
-            </pre>
-          </div>
-        </div>
-      {{/if}}
-    </div>
-  </section>
+<div class="row">
+  <div class="two columns">
+    <label class="right inline">Shop name</label>
+  </div>
+  <div class="ten columns">
+    {{view Ember.TextField valueBinding="name" placeholder="e.g. My Store" class="five"}}
+  </div>
 </div>
+<div class="row">
+  <div class="two columns">
+    <label class="right inline">Shop domain</label>
+  </div>
+  <div class="ten columns">
+    {{view Ember.TextField valueBinding="domain" placeholder="e.g. somestore.myshopify.com" class="five"}}
+  </div>
+</div>
+<div class="row">
+  <div class="two columns">
+    <label class="right inline">Timezone</label>
+  </div>
+  <div class="ten columns">
+    {{view Ember.Select contentBinding="SS.timezones" optionValuePath="content.value" optionLabelPath="content.name" valueBinding="timezone" class="five"}}
+  </div>
+</div>
+<div class="row">
+  <div class="ten columns offset-by-two">
+    <label class="inline">
+      {{view Ember.Checkbox checkedBinding="sendDailyNotifications"}}
+      Send daily reports
+    </label>
+  </div>
+</div>
+<div class="row">
+  <div class="ten columns offset-by-two">
+    <button class="button" {{action save target="controller"}}>Save</button>
+  </div>
+</div>
+<div class="row content">
+  <div class="ten columns offset-by-two">
+    <button class="button alert" {{action deleteShop target="controller"}}>Delete shop</button>
+  </div>
+</div>
+
+{{#if isCustomShop}}
+  <div class="row content">
+    <div class="twelve column">
+      <div class="panel callout">
+        <h4>Setup for custom shop</h4>
+
+        <p>As you are using ShopStream with your custom, non-Shopify shop, we were not able to set it up for you. Just add the following tag to your template:</p>
+
+        <p><pre>&lt;script type=&quot;text/javascript&quot; src=&quot;{{trackerScriptUrl}}&quot;&gt;&lt;/script&gt;</pre></p>
+
+        <p>Then, track orders via JS like this:</p>
+
+        <p><pre>
+_shopstream.addOrder("Order name", 20.02, "email@customer.com", "first", "last");
+_shopstream.addItem("Title", 10.01, 2);
+_shopstream.trackOrder();
+        </pre></p>
+      </div>
+    </div>
+  </div>
+{{/if}}
