--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-  <title>ShopStream</title>
-  <%= stylesheet_link_tag 'application', media: 'all' %>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>ShopStream</title>
+	<%= stylesheet_link_tag 'application', media: 'all' %>
 </head>
-<body class="feather">
-<%= yield %>
+<body>
+  <%= yield %>
 
-<%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'application' %>
 </body>
 </html>
