--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,12 +1,12 @@
-<div id="password" style="display: block">
+<div class="six columns offset-by-three">
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <h3>Forgot your password?</h3>
 
     <%= devise_error_messages! %>
 
-    <div class="input url"><%= f.email_field :email, placeholder: 'Email' %></div>
+    <%= f.email_field :email, placeholder: 'Email', class: 'twelve' %>
 
-    <div><%= f.submit "Send me reset password instructions" %></div>
+    <%= f.submit "Send me reset password instructions", class: 'button' %>
   <% end %>
 
   <%= render "users/shared/links" %>
