--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,16 +1,16 @@
-<div id="password" style="display: block">
+<div class="six columns offset-by-three">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <h3>Sign up</h3>
 
     <%= devise_error_messages! %>
 
-    <div class="input username"><%= f.email_field :email, placeholder: 'Email' %></div>
+    <%= f.email_field :email, placeholder: 'Email', class: 'twelve' %>
 
-    <div class="input"><%= f.password_field :password, placeholder: 'Password' %></div>
+    <%= f.password_field :password, placeholder: 'Password', class: 'twelve' %>
 
-    <div class="input password"><%= f.password_field :password_confirmation, placeholder: 'Confirm' %></div>
+    <%= f.password_field :password_confirmation, placeholder: 'Confirm', class: 'twelve' %>
 
-    <div><%= f.submit "Sign up" %></div>
+    <%= f.submit "Sign up", class: 'button' %>
   <% end %>
 
   <%= render "users/shared/links" %>
