--- a/app/assets/javascripts/templates/header.handlebars
+++ b/app/assets/javascripts/templates/header.handlebars
@@ -9,7 +9,7 @@
   </ul>
   <section>
     <ul class="left">
-      <li class="divider"></li>
+      <li class="divider show-for-medium-and-up"></li>
 
       {{#if isShop}}
         <li><a {{action goToDashboard href=true}}>Dashboard</a></li>
@@ -19,6 +19,21 @@
     </ul>
 
     <ul class="right">
+      <li class="divider show-for-medium-and-up"></li>
+      <li class="has-dropdown">
+        <a href="#">
+          {{#if isShop}}{{name}}{{else}}Choose shop...{{/if}}
+        </a>
+        <ul class="dropdown">
+          {{#if SS.user.shops}}
+            {{#each shop in SS.user.shops}}
+              <li><a {{action goToDashboard shop href=true}}>{{shop.name}}</a></li>
+            {{/each}}
+            <li class="divider"></li>
+          {{/if}}
+          <li><a {{action goToIndex href=true}}>Add shop</a></li>
+        </ul>
+      </li>
       <li class="divider show-for-medium-and-up"></li>
       <li class="has-dropdown">
         <a href="#">{{SS.user.email}}</a>
