sound on sales setting

--- a/app/assets/javascripts/templates/settings.handlebars
+++ b/app/assets/javascripts/templates/settings.handlebars
@@ -30,6 +30,10 @@
       {{view Ember.Checkbox checkedBinding="sendDailyNotifications"}}
       Send daily reports
     </label>
+    <label class="inline">
+      {{view Ember.Checkbox checkedBinding="soundOnSales"}}
+      Beep on sales
+    </label>
   </div>
 </div>
 <div class="row">
