--- a/app/assets/javascripts/templates/header.handlebars
+++ b/app/assets/javascripts/templates/header.handlebars
@@ -31,7 +31,7 @@
             {{/each}}
             <li class="divider"></li>
           {{/if}}
-          <li><a {{action goToIndex href=true}}>Add shop</a></li>
+          <li><a {{action goToAddShop href=true}}>Add shop...</a></li>
         </ul>
       </li>
       <li class="divider show-for-medium-and-up"></li>
