--- a/app/assets/javascripts/templates/shop_selector.handlebars
+++ b/app/assets/javascripts/templates/shop_selector.handlebars
@@ -23,5 +23,9 @@
     {{/with}}
   {{/collection}}
 
-  {{outlet add}}
+  <div class="row">
+    <div class="two columns offset-by-five">
+      <a {{action goToAddShop href=true}} class="button success twelve">Add shop</a>
+    </div>
+  </div>
 </div>
