delete shops w/o page reload

--- a/app/assets/javascripts/templates/settings.handlebars
+++ b/app/assets/javascripts/templates/settings.handlebars
@@ -43,7 +43,7 @@
 </div>
 <div class="row content">
   <div class="ten columns offset-by-two">
-    <button class="button alert" {{action deleteShop target="controller"}}>Delete shop</button>
+    <a class="button alert" {{action deleteShop target="controller"}} data-confirm="Are you sure? This action cannot be undone.">Delete shop</a>
   </div>
 </div>
 
