commented js tracking example

--- a/app/assets/javascripts/templates/settings.handlebars
+++ b/app/assets/javascripts/templates/settings.handlebars
@@ -60,8 +60,18 @@
         <p>Then, track orders via JS like this:</p>
 
         <p><pre>
-_shopstream.addOrder("Order name", 20.02, "email@customer.com", "first", "last");
-_shopstream.addItem("Title", 10.01, 2);
+_shopstream.addOrder(
+  "Order name", // order name, required
+  20.02, // order total, required
+  "email@customer.com", // customer email, required
+  "first", // customer first name, required
+  "last" // customer last name, required
+);
+_shopstream.addItem(
+  "Title", // item name, required
+  10.01, // item price, required
+  2 // item quantity, required
+);
 _shopstream.trackOrder();
         </pre></p>
       </div>
