minor devise layout improvements

--- a/app/assets/javascripts/templates/shop_selector.handlebars
+++ b/app/assets/javascripts/templates/shop_selector.handlebars
@@ -8,7 +8,7 @@
             {{#if view.content.isShopifyShop}}
               Shopify shop
             {{else}}
-              Non-Shopify shop
+              Custom shop
             {{/if}}
           </small>
         </h5>
