--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="six columns offset-by-three">
+<div class="five columns centered panel">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <h3>Sign up</h3>
 
