new, cool signup page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,4 +7,6 @@
  *= require dashboard
  *= require feed
  *= require devise
+ *= require general_enclosed_foundicons_ie7
+ *= require general_enclosed_foundicons
  */
