--- a/app/assets/stylesheets/devise.css.scss
+++ b/app/assets/stylesheets/devise.css.scss
@@ -5,4 +5,34 @@
   border: solid 1px #ddd;
   box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
   position: relative;
+	min-height:330px;
+	margin-top: 50px;
+}
+.grey-bg { 
+	background: url("absurdidad.png");
+	border-left: 2px dashed #d8d8d8; 
+	border-radius: 0px 8px 8px 0px ;
+	padding-top:10px;
+}
+
+.terms-notice {
+	font-size: 0.8em;
+	margin-top: 9px;
+}
+
+
+.benefit-header {
+	color: #2BA6CB;
+}
+.signup-icon { 
+	font-size: 2.2em;
+	float:left;
+	margin-right:10px;
+	margin-top:8px;
+	color: #2BA6CB;
+}
+
+
+.benefit-p {
+	line-height: 1.4em;
 }
