--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,13 +1,15 @@
 <div class="five columns centered panel login-window">
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <h3>Forgot your password?</h3>
-
+		<p>Enter your email address below and we’ll send you instructions.</p>
+		<hr/>
     <%= devise_error_messages! %>
 
     <%= f.email_field :email, placeholder: 'Email', class: 'twelve' %>
 
-    <%= f.submit "Send me reset password instructions", class: 'button' %>
+    <%= f.submit "Recover Password", class: 'button' %>
   <% end %>
-
-  <%= render "users/shared/links" %>
+	<p>
+  <i class="foundicon-left-arrow back"></i> <%= link_to "back to login!", new_session_path(resource_name), class: 'small' %>
+	</p>
 </div>
