adding signup subheader

--- a/app/assets/stylesheets/devise.css.scss
+++ b/app/assets/stylesheets/devise.css.scss
@@ -15,7 +15,9 @@
 	border-radius: 0px 8px 8px 0px ;
 	padding-top:10px;
 }
-
+.center { 
+	text-align: center;
+}
 .terms-notice {
 	font-size: 0.8em;
 	margin-top: 9px;
