--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="eight columns centered">
-		<h2>Start your free 14-day trial today.</h2>
+		<h2 class="center">Start your free 14-day trial today.</h2>
+		<h4 class="subheader center">No credit card required. World-class support and a great service are just a few clicks away. Let's sell more!</h4>
 	</div>
 </div>
 <div class="row">
